# juniper_serde

./: Cargo.toml  README.md
src/: lib.rs
